--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@
 }
 
 .skip-link:focus {
-  top: 16vh;
+  top: calc(var(--vh) * 16);
 }
 
 html {
